<resources>
    <string name="app_name">MyApp2</string>
    <string name="insira_a_senha">Insira a senha:</string>
    <string name="sair">Sair</string>
    <string name="esqueceu_a_senha">Esqueceu a senha?</string>
    <string name="todo">TODO</string>
    <string name="alquimistas_federais">Alquimistas Federais!</string>
    <string name="alquimista">Alquimista:</string>
    <string name="insira_o_usu_rio">Insira o usuário:</string>
    <string name="senha">Senha:</string>
    <string name="entrar">Entrar</string>
    <string name="insira_a_senha_do_usu_rio">Insira a senha do usuário:</string>
    <string name="insira_a_senha">Insira a senha:</string>
</resources>