<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/darker_gray"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/todo"
        android:padding="10sp"
        android:src="@drawable/logo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="50dp"
        android:text="@string/alquimistas_federais"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/alquimista"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:textStyle="italic" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:autofillHints=""
        android:background="@android:color/holo_blue_bright"
        android:drawableEnd="@drawable/ic_user_ini"
        android:drawableRight="@drawable/ic_user_ini"
        android:hint="@string/insira_o_usu_rio"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:padding="5dp"
        android:textSize="20sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/senha"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:textStyle="italic" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:autofillHints=""
        android:background="@android:color/holo_blue_bright"
        android:drawableEnd="@drawable/ic_pass_ini"
        android:drawableRight="@drawable/ic_pass_ini"
        android:hint="@string/insira_a_senha"
        android:inputType="textPassword"
        android:padding="5dp"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="8sp"
            android:layout_weight="1"
            android:background="@android:color/holo_green_light"
            android:text="@string/entrar"
            android:textColor="@android:color/black" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="8sp"
            android:layout_weight="1"
            android:background="@android:color/holo_red_light"
            android:text="@string/sair"
            android:textColor="@android:color/black" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:gravity="end"
        android:text="@string/esqueceu_a_senha"
        android:textColor="@android:color/black" />

</LinearLayout>